--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 #yttc-form-div {
-    width: 400px;
+    width: 600px;
     margin: 30px auto;
     overflow: hidden;
     padding: 20px;
@@ -87,7 +87,7 @@ main {
     height: 40px;
     border: 0px;
     padding: 10px;
-    background: #409C8C;
+    background: #595add;
     color: #fff;
     border-radius: 5px;
     font-size: 16px;
